# google-colab-cli

./: README.md  pyproject.toml
docs/: 04_automation_and_utility.md  05_run_command.md
src/colab_cli/: auto_update.py  cli.py  client.py  repl.py  runtime.py  utils.py
src/colab_cli/commands/: automation.py  execution.py  run.py  session.py  utility.py
tests/: test_readme.py  test_run.py  test_update.py  test_utils.py
